--- a/index.html
+++ b/index.html
@@ -37,11 +37,11 @@
     </header>
 
     <nav class="nav">
-        <a class="nav-home" href="#">Home</a>
-        <a class="nav-action" href="#">Action</a>
-        <a class="nav-shooter" href="#">Shooter</a>
-        <a class="nav-horror" href="#">Horror</a>
-        <a class="nav-sports" href="#">Sports</a>
+        <a class="nav-home" href="index.html">Home</a>
+        <a class="nav-action" href="action.html">Action</a>
+        <a class="nav-shooter" href="shooter.html">Shooter</a>
+        <a class="nav-horror" href="horror.html">Horror</a>
+        <a class="nav-sports" href="sports.html">Sports</a>
     </nav>
 
     <main class="main">
