--- a/action.html
+++ b/action.html
@@ -45,6 +45,61 @@
     </nav>
 
     <main class="main">
+        <section class="container">
+            <h2 class="game-section--title">Popular in Action</h2>
+            <div class="game-section">
+                <div class="game">
+                    <img src="img/mordor.png" alt="mordor">
+                    <div class="game-info">
+                        <p>Shadows Of Mordor</p>
+                        <p class="price">1,000$</p>
+                    </div>
+                </div>
+                <div class="game">
+                    <img src="img/nier.png" alt="nier">
+                    <div class="game-info">
+                        <p>Nier: Automata</p>
+                        <p class="price">1,000$</p>
+                    </div>
+                </div>
+                <div class="game">
+                    <img src="img/godofwar.png" alt="godofwar">
+                    <div class="game-info">
+                        <p>God Of War</p>
+                        <p class="price">1,000$</p>
+                    </div>
+                </div>
+
+            </div>
+        </section>
+
+        <section class="recently-added container">
+            <h2 class="game-section--title">Recently Added Action Games</h2>
+            <div class="game-section">
+                <div class="game">
+                    <img src="img/deadpool.png" alt="dedpul">
+                    <div class="game-info">
+                        <p>Deadpool</p>
+                        <p class="price">1,000$</p>
+                    </div>
+                </div>
+                <div class="game">
+                    <img src="img/dogs.png" alt="dogs">
+                    <div class="game-info">
+                        <p>Watch Dogs</p>
+                        <p class="price">1,000$</p>
+                    </div>
+                </div>
+                <div class="game">
+                    <img src="img/prey.png" alt="prey">
+                    <div class="game-info">
+                        <p>Prey</p>
+                        <p class="price">1,000$</p>
+                    </div>
+                </div>
+            </div>
+            
+        </section>
 
     </main>
 
