--- a/shooter.html
+++ b/shooter.html
@@ -11,9 +11,9 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700;900&family=Titillium+Web:wght@400;700;900&display=swap" rel="stylesheet">
 
-    <title>Game Store</title>
+    <title>Game Store - Shooter</title>
 </head>
-<body class="index-html">
+<body class="shooter-html">
     <header class="header">
         <h1>Game Store.</h1>
 
@@ -37,63 +37,63 @@
     </header>
 
     <nav class="nav">
-        <a class="nav-home" href="#">Home</a>
+        <a class="nav-home" href="index.html">Home</a>
         <a class="nav-action" href="action.html">Action</a>
-        <a class="nav-shooter" href="shooter.html">Shooter</a>
+        <a class="nav-shooter" href="#">Shooter</a>
         <a class="nav-horror" href="horror.html">Horror</a>
         <a class="nav-sports" href="sports.html">Sports</a>
     </nav>
 
     <main class="main">
-        <section class="popular container">
-            <h2 class="game-section--title">Popular Games</h2>
+        <section class="container">
+            <h2 class="game-section--title">Popular in Shooter</h2>
             <div class="game-section">
                 <div class="game">
-                    <img src="img/callofduty.png" alt="callofduty">
+                    <img src="img/doom.png" alt="doom">
+                    <div class="game-info">
+                        <p>Doom</p>
+                        <p class="price">1,000$</p>
+                    </div>
+                </div>
+                <div class="game">
+                    <img src="img/killzone.png" alt="killzone">
+                    <div class="game-info">
+                        <p>Killzone</p>
+                        <p class="price">1,000$</p>
+                    </div>
+                </div>
+                <div class="game">
+                    <img src="img/callofduty.png" alt="caloduti">
                     <div class="game-info">
                         <p>Call Of Duty</p>
                         <p class="price">1,000$</p>
                     </div>
                 </div>
-                <div class="game">
-                    <img src="img/godofwar.png" alt="godofwar">
-                    <div class="game-info">
-                        <p>God Of War</p>
-                        <p class="price">1,000$</p>
-                    </div>
-                </div>
-                <div class="game">
-                    <img src="img/residentemalvado.png" alt="residenivol">
-                    <div class="game-info">
-                        <p>Resident Evil</p>
-                        <p class="price">1,000$</p>
-                    </div>
-                </div>        
-            </div>
 
+            </div>
         </section>
 
         <section class="recently-added container">
-            <h2 class="game-section--title">Recently Added</h2>
+            <h2 class="game-section--title">Recently Added Shooter Games</h2>
             <div class="game-section">
                 <div class="game">
-                    <img src="img/deadpool.png" alt="dedpul">
+                    <img src="img/wolfestein.png" alt="wolfestein">
                     <div class="game-info">
-                        <p>Deadpool</p>
+                        <p>Wolfenstein</p>
                         <p class="price">1,000$</p>
                     </div>
                 </div>
                 <div class="game">
-                    <img src="img/gtav.png" alt="gtav">
+                    <img src="img/battlefield.png" alt="barelfil">
                     <div class="game-info">
-                        <p>GTA V</p>
+                        <p>Battlefield</p>
                         <p class="price">1,000$</p>
                     </div>
                 </div>
                 <div class="game">
-                    <img src="img/prey.png" alt="prey">
+                    <img src="img/titanfol.png" alt="titanfol">
                     <div class="game-info">
-                        <p>Prey</p>
+                        <p>Titanfall 2</p>
                         <p class="price">1,000$</p>
                     </div>
                 </div>
