--- a/action.html
+++ b/action.html
@@ -11,7 +11,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700;900&family=Titillium+Web:wght@400;700;900&display=swap" rel="stylesheet">
 
-    <title>Game Store</title>
+    <title>Game Store - Action</title>
 </head>
 <body class="action-html">
     <header class="header">
@@ -38,7 +38,7 @@
 
     <nav class="nav">
         <a class="nav-home" href="index.html">Home</a>
-        <a class="nav-action" href="action.html">Action</a>
+        <a class="nav-action" href="#">Action</a>
         <a class="nav-shooter" href="shooter.html">Shooter</a>
         <a class="nav-horror" href="horror.html">Horror</a>
         <a class="nav-sports" href="sports.html">Sports</a>
