--- a/index.html
+++ b/index.html
@@ -48,27 +48,27 @@
         <section class="popular container">
             <h2 class="game-section--title">Popular Games</h2>
             <div class="game-section">
-                <div class="game">
-                    <img src="img/callofduty.png" alt="callofduty">
-                    <div class="game-info">
-                        <p>Call Of Duty</p>
-                        <p class="price">1,000$</p>
-                    </div>
-                </div>
-                <div class="game">
+                    <a href="img/battlefield.png" class="game">
+                        <img src="img/callofduty.png" alt="callofduty">
+                        <div class="game-info">
+                            <p>Call Of Duty</p>
+                            <p class="price">1,000$</p>
+                        </div>
+                    </a>
+                <a href="img/battlefield.png" class="game">
                     <img src="img/godofwar.png" alt="godofwar">
                     <div class="game-info">
                         <p>God Of War</p>
                         <p class="price">1,000$</p>
                     </div>
-                </div>
-                <div class="game">
+                </a>
+                <a href="img/battlefield.png" class="game">
                     <img src="img/residentemalvado.png" alt="residenivol">
                     <div class="game-info">
                         <p>Resident Evil</p>
                         <p class="price">1,000$</p>
                     </div>
-                </div>        
+                </a>
             </div>
 
         </section>
@@ -76,27 +76,27 @@
         <section class="recently-added container">
             <h2 class="game-section--title">Recently Added</h2>
             <div class="game-section">
-                <div class="game">
+                <a href="img/battlefield.png" class="game">
                     <img src="img/deadpool.png" alt="dedpul">
                     <div class="game-info">
                         <p>Deadpool</p>
                         <p class="price">1,000$</p>
                     </div>
-                </div>
-                <div class="game">
+                </a>
+                <a href="img/battlefield.png" class="game">
                     <img src="img/gtav.png" alt="gtav">
                     <div class="game-info">
                         <p>GTA V</p>
                         <p class="price">1,000$</p>
                     </div>
-                </div>
-                <div class="game">
+                </a>
+                <a href="img/battlefield.png" class="game">
                     <img src="img/prey.png" alt="prey">
                     <div class="game-info">
                         <p>Prey</p>
                         <p class="price">1,000$</p>
                     </div>
-                </div>
+                </a>
             </div>
             
         </section>
