--- a/shooter.html
+++ b/shooter.html
@@ -48,27 +48,27 @@
         <section class="container">
             <h2 class="game-section--title">Popular in Shooter</h2>
             <div class="game-section">
-                <div class="game">
+                <a href="img/battlefield.png" class="game">
                     <img src="img/doom.png" alt="doom">
                     <div class="game-info">
                         <p>Doom</p>
                         <p class="price">1,000$</p>
                     </div>
-                </div>
-                <div class="game">
+                </a>
+                <a href="img/battlefield.png" class="game">
                     <img src="img/killzone.png" alt="killzone">
                     <div class="game-info">
                         <p>Killzone</p>
                         <p class="price">1,000$</p>
                     </div>
-                </div>
-                <div class="game">
+                </a>
+                <a href="img/battlefield.png" class="game">
                     <img src="img/callofduty.png" alt="caloduti">
                     <div class="game-info">
                         <p>Call Of Duty</p>
                         <p class="price">1,000$</p>
                     </div>
-                </div>
+                </a>
 
             </div>
         </section>
@@ -76,27 +76,27 @@
         <section class="recently-added container">
             <h2 class="game-section--title">Recently Added Shooter Games</h2>
             <div class="game-section">
-                <div class="game">
+                <a href="img/battlefield.png" class="game">
                     <img src="img/wolfestein.png" alt="wolfestein">
                     <div class="game-info">
                         <p>Wolfenstein</p>
                         <p class="price">1,000$</p>
                     </div>
-                </div>
-                <div class="game">
+                </a>
+                <a href="img/battlefield.png" class="game">
                     <img src="img/battlefield.png" alt="barelfil">
                     <div class="game-info">
                         <p>Battlefield</p>
                         <p class="price">1,000$</p>
                     </div>
-                </div>
-                <div class="game">
+                </a>
+                <a href="img/battlefield.png" class="game">
                     <img src="img/titanfol.png" alt="titanfol">
                     <div class="game-info">
                         <p>Titanfall 2</p>
                         <p class="price">1,000$</p>
                     </div>
-                </div>
+                </a>
             </div>
             
         </section>
