--- a/horror.html
+++ b/horror.html
@@ -12,9 +12,9 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700;900&family=Titillium+Web:wght@400;700;900&display=swap" rel="stylesheet">
 
-    <title>Game Store - Action</title>
+    <title>Game Store - Horror</title>
 </head>
-<body class="action-html">
+<body class="horror-html">
     <header class="header">
         <h1>Game Store.</h1>
 
@@ -39,9 +39,9 @@
 
     <nav class="nav">
         <a class="nav-home" href="index.html">Home</a>
-        <a class="nav-action" href="#">Action</a>
+        <a class="nav-action" href="action.html">Action</a>
         <a class="nav-shooter" href="shooter.html">Shooter</a>
-        <a class="nav-horror" href="horror.html">Horror</a>
+        <a class="nav-horror" href="#">Horror</a>
         <a class="nav-sports" href="sports.html">Sports</a>
     </nav>
 
