--- a/shooter.html
+++ b/shooter.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/styles.css">
 
@@ -45,24 +46,24 @@
     </nav>
 
     <main class="main">
-        <section class="container">
+        <section class="popular container">
             <h2 class="game-section--title">Popular in Shooter</h2>
             <div class="game-section">
-                <a href="img/battlefield.png" class="game">
+                <a target="_blank" href="gamepage.html" class="game">
                     <img src="img/doom.png" alt="doom">
                     <div class="game-info">
                         <p>Doom</p>
                         <p class="price">1,000$</p>
                     </div>
                 </a>
-                <a href="img/battlefield.png" class="game">
+                <a target="_blank" href="gamepage.html" class="game">
                     <img src="img/killzone.png" alt="killzone">
                     <div class="game-info">
                         <p>Killzone</p>
                         <p class="price">1,000$</p>
                     </div>
                 </a>
-                <a href="img/battlefield.png" class="game">
+                <a target="_blank" href="gamepage.html" class="game">
                     <img src="img/callofduty.png" alt="caloduti">
                     <div class="game-info">
                         <p>Call Of Duty</p>
@@ -76,21 +77,21 @@
         <section class="recently-added container">
             <h2 class="game-section--title">Recently Added Shooter Games</h2>
             <div class="game-section">
-                <a href="img/battlefield.png" class="game">
+                <a target="_blank" href="gamepage.html" class="game">
                     <img src="img/wolfestein.png" alt="wolfestein">
                     <div class="game-info">
                         <p>Wolfenstein</p>
                         <p class="price">1,000$</p>
                     </div>
                 </a>
-                <a href="img/battlefield.png" class="game">
+                <a target="_blank" href="gamepage.html" class="game">
                     <img src="img/battlefield.png" alt="barelfil">
                     <div class="game-info">
                         <p>Battlefield</p>
                         <p class="price">1,000$</p>
                     </div>
                 </a>
-                <a href="img/battlefield.png" class="game">
+                <a target="_blank" href="gamepage.html" class="game">
                     <img src="img/titanfol.png" alt="titanfol">
                     <div class="game-info">
                         <p>Titanfall 2</p>
