--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/styles.css">
 
@@ -48,21 +49,21 @@
         <section class="popular container">
             <h2 class="game-section--title">Popular Games</h2>
             <div class="game-section">
-                    <a href="img/battlefield.png" class="game">
+                    <a target="_blank" href="gamepage.html" class="game">
                         <img src="img/callofduty.png" alt="callofduty">
                         <div class="game-info">
                             <p>Call Of Duty</p>
                             <p class="price">1,000$</p>
                         </div>
                     </a>
-                <a href="img/battlefield.png" class="game">
+                <a target="_blank" href="gamepage.html" class="game">
                     <img src="img/godofwar.png" alt="godofwar">
                     <div class="game-info">
                         <p>God Of War</p>
                         <p class="price">1,000$</p>
                     </div>
                 </a>
-                <a href="img/battlefield.png" class="game">
+                <a target="_blank" href="gamepage.html" class="game">
                     <img src="img/residentemalvado.png" alt="residenivol">
                     <div class="game-info">
                         <p>Resident Evil</p>
@@ -76,21 +77,21 @@
         <section class="recently-added container">
             <h2 class="game-section--title">Recently Added</h2>
             <div class="game-section">
-                <a href="img/battlefield.png" class="game">
+                <a target="_blank" href="gamepage.html" class="game">
                     <img src="img/deadpool.png" alt="dedpul">
                     <div class="game-info">
                         <p>Deadpool</p>
                         <p class="price">1,000$</p>
                     </div>
                 </a>
-                <a href="img/battlefield.png" class="game">
+                <a target="_blank" href="gamepage.html" class="game">
                     <img src="img/gtav.png" alt="gtav">
                     <div class="game-info">
                         <p>GTA V</p>
                         <p class="price">1,000$</p>
                     </div>
                 </a>
-                <a href="img/battlefield.png" class="game">
+                <a target="_blank" href="gamepage.html" class="game">
                     <img src="img/prey.png" alt="prey">
                     <div class="game-info">
                         <p>Prey</p>
