--- a/sports.html
+++ b/sports.html
@@ -12,9 +12,9 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700;900&family=Titillium+Web:wght@400;700;900&display=swap" rel="stylesheet">
 
-    <title>Game Store - Action</title>
+    <title>Game Store - Sports</title>
 </head>
-<body class="action-html">
+<body class="sports-html">
     <header class="header">
         <h1>Game Store.</h1>
 
@@ -39,34 +39,34 @@
 
     <nav class="nav">
         <a class="nav-home" href="index.html">Home</a>
-        <a class="nav-action" href="#">Action</a>
+        <a class="nav-action" href="action.html">Action</a>
         <a class="nav-shooter" href="shooter.html">Shooter</a>
         <a class="nav-horror" href="horror.html">Horror</a>
-        <a class="nav-sports" href="sports.html">Sports</a>
+        <a class="nav-sports" href="#">Sports</a>
     </nav>
 
     <main class="main">
         <section class="popular container">
-            <h2 class="game-section--title">Popular in Action</h2>
+            <h2 class="game-section--title">Popular in Shooter</h2>
             <div class="game-section">
-                <a target="_blank" href="gamepage.html" class="game">
-                    <img src="img/mordor.png" alt="mordor">
+                <a target="_blank" href="gamepage.html"" class="game">
+                    <img src="img/doom.png" alt="doom">
                     <div class="game-info">
-                        <p>Shadows Of Mordor</p>
+                        <p>Doom</p>
                         <p class="price">1,000$</p>
                     </div>
                 </a>
-                <a target="_blank" href="gamepage.html" class="game">
-                    <img src="img/nier.png" alt="nier">
+                <a target="_blank" href="gamepage.html"" class="game">
+                    <img src="img/killzone.png" alt="killzone">
                     <div class="game-info">
-                        <p>Nier: Automata</p>
+                        <p>Killzone</p>
                         <p class="price">1,000$</p>
                     </div>
                 </a>
-                <a target="_blank" href="gamepage.html" class="game">
-                    <img src="img/godofwar.png" alt="godofwar">
+                <a target="_blank" href="gamepage.html"" class="game">
+                    <img src="img/callofduty.png" alt="caloduti">
                     <div class="game-info">
-                        <p>God Of War</p>
+                        <p>Call Of Duty</p>
                         <p class="price">1,000$</p>
                     </div>
                 </a>
@@ -75,26 +75,26 @@
         </section>
 
         <section class="recently-added container">
-            <h2 class="game-section--title">Recently Added Action Games</h2>
+            <h2 class="game-section--title">Recently Added Shooter Games</h2>
             <div class="game-section">
-                <a target="_blank" href="gamepage.html" class="game">
-                    <img src="img/deadpool.png" alt="dedpul">
+                <a target="_blank" href="gamepage.html"" class="game">
+                    <img src="img/wolfestein.png" alt="wolfestein">
                     <div class="game-info">
-                        <p>Deadpool</p>
+                        <p>Wolfenstein</p>
                         <p class="price">1,000$</p>
                     </div>
                 </a>
-                <a target="_blank" href="gamepage.html" class="game">
-                    <img src="img/dogs.png" alt="dogs">
+                <a target="_blank" href="gamepage.html"" class="game">
+                    <img src="img/battlefield.png" alt="barelfil">
                     <div class="game-info">
-                        <p>Watch Dogs</p>
+                        <p>Battlefield</p>
                         <p class="price">1,000$</p>
                     </div>
                 </a>
-                <a target="_blank" href="gamepage.html" class="game">
-                    <img src="img/prey.png" alt="prey">
+                <a target="_blank" href="gamepage.html"" class="game">
+                    <img src="img/titanfol.png" alt="titanfol">
                     <div class="game-info">
-                        <p>Prey</p>
+                        <p>Titanfall 2</p>
                         <p class="price">1,000$</p>
                     </div>
                 </a>
